--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gembase</title>
+    <title>ProsperPay</title>
     <link rel="stylesheet" href="style.css">
     <link href="./output.css" rel="stylesheet">
 
 </head>
 <body>
-    
+    <nav class="main_nav">
+        <ul class="nav_links">
+            <li><a class="web_logo" href="#">ProsperPay</a></li>
+            <li><p class="logo_das"></p></li>
+            <li><a href="#">For Personal</a></li>
+            <li><a href="#">For Business</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Prising</a></li>
+            <li><a href="#">About Us</a></li>
+        </ul>
+        
+        <ul class="login_btn_parent gap-2">
+            <a id="login_btn_1" class="login_btn" href="#"><button>Login</button></a>
+            <a id="login_btn_2" class="login_btn" href="#"><button>Get Started</button></a>
+        </ul>
+    </nav>
 </body>
 </html>
