adding parsonal section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="hero.css">
+    <link rel="stylesheet" href="parsonal_part.css">
 
 </head>
 <body>
@@ -57,9 +58,27 @@
                     <div class="media_link">Follow our&nbsp;<a href="#">Social Media</a></div>
                 </div>
             </div>
-
         </div>
     </div>
+
+
+    <div class="hero_wraper hero_wraper2">
+
+        <div class="hero_img">
+            <div class="personal_img_container">
+
+            </div>
+        </div>
+
+        <div class="hero_text hero_text2">
+            <p class="hero_context">FOR PERSONAL</p>
+            <h1 class="hero_title">Easy Manage your Finances and Grow Money</h1>
+            <p class="hero_main_context">Peace of mind for your finances. Saving, making transactions, investments and starting a better life with ProsperPay.</p>
+            <a class="hero_button" href="#"><button>Get Started</button></a>
+        </div>
+        
+    </div>
+
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
