--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@
         </div>
     </div>
 
+    <div class="colab">
+        <ul class="colab__ul colab__ul--style">
+            <li class="colab__ul__item colab__ul__item1--style" style="--position: 1;"></li>
+            <li class="colab__ul__item colab__ul__item2--style" style="--position: 2;"></li>
+            <li class="colab__ul__item colab__ul__item3--style" style="--position: 3;"></li>
+            <li class="colab__ul__item colab__ul__item4--style" style="--position: 4;"></li>
+            <li class="colab__ul__item colab__ul__item5--style" style="--position: 5;"></li>
+
+        </ul>
+    </div>
 
     <div class="hero_wraper hero_wraper2">
 
