colab bar finished

--- a/index.html
+++ b/index.html
@@ -63,11 +63,23 @@
 
     <div class="colab">
         <ul class="colab__ul colab__ul--style">
-            <li class="colab__ul__item colab__ul__item1--style" style="--position: 1;"></li>
-            <li class="colab__ul__item colab__ul__item2--style" style="--position: 2;"></li>
-            <li class="colab__ul__item colab__ul__item3--style" style="--position: 3;"></li>
-            <li class="colab__ul__item colab__ul__item4--style" style="--position: 4;"></li>
-            <li class="colab__ul__item colab__ul__item5--style" style="--position: 5;"></li>
+            <li class="colab__ul__item colab__ul__item1--style"></li>
+            <li class="colab__ul__item colab__ul__item2--style"></li>
+            <li class="colab__ul__item colab__ul__item3--style"></li>
+            <li class="colab__ul__item colab__ul__item4--style"></li>
+            <li class="colab__ul__item colab__ul__item5--style"></li>
+        </ul>
+    </div>
+
+    <div class="colab_mobile">
+        <ul class="colab_mobile__ul1 colab_mobile__ul1--style1">
+            <li class="colab_mobile__item colab_mobile--item1"></li>
+            <li class="colab_mobile__item colab_mobile--item2"></li>
+            <li class="colab_mobile__item colab_mobile--item3"></li>
+        </ul>
+        <ul class="colab_mobile__ul1 colab_mobile__ul1--style2">
+            <li class="colab_mobile__item colab_mobile--item4"></li>
+            <li class="colab_mobile__item colab_mobile--item5"></li>
         </ul>
     </div>
 
