fund section build and finished

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="hero.css">
     <link rel="stylesheet" href="parsonal_part.css">
+    <link rel="stylesheet" href="funds.css">
 
 </head>
 <body>
@@ -100,6 +101,20 @@
         
     </div>
 
+    <div class="funds_section">
+        <div class="funds_section__item funds_section__item1--style">
+            <div class="fund_counter">
+                <div class="fund_counter__box fund_counter__box--style1"><span>$12K</span><p>Fund and reservation</p></div>
+                <div class="fund_counter__box fund_counter__box--style2"><span>42M+</span><p>Using ProsperPay</p></div>
+            </div>
+
+            <h1 class="fund_title">The freedom of finance for everyone, everywhere</h1>
+            <p class="fund_context">Eam up to 1.2% caseback every time you spend hard work should be rewarding, Cashback dependent on plan.</p>
+        </div>
+        <div class="funds_section__item funds_section__item2--style">
+            <a class="hero_button fund_button" href="#"><button>Get Started</button></a>            
+        </div>
+    </div>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
