Adding buisness section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="hero.css">
     <link rel="stylesheet" href="parsonal_part.css">
     <link rel="stylesheet" href="funds.css">
+    <link rel="stylesheet" href="business_sec.css">
 
 </head>
 <body>
@@ -115,6 +116,24 @@
             <a class="hero_button fund_button" href="#"><button>Get Started</button></a>            
         </div>
     </div>
+
+    <div class="hero_wraper hero_wraper hero_wraper3">
+
+        <div class="hero_text hero_text">
+            <p class="hero_context">FOR BUSINESS</p>
+            <h1 class="hero_title">Don't take business matters personally</h1>
+            <p class="hero_main_context">Swipe to Business, then activate your business account so you can separate your personal and business finances into two different accounts.</p>
+            <a class="hero_button" href="#"><button>Get Started</button></a>
+        </div>
+
+        <div class="hero_img">
+            <div class="personal_img_container business_img">
+
+            </div>
+        </div>
+        
+    </div>
+
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
