Adding 2 layer background

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="parsonal_part.css">
     <link rel="stylesheet" href="funds.css">
     <link rel="stylesheet" href="business_sec.css">
+    <link rel="stylesheet" href="solution_sec.css">
 
 </head>
 <body>
@@ -27,7 +28,7 @@
         <ul class="login_btn_parent">
             <a id="login_btn_1" class="login_btn" href="#"><p>Login</p></a>
             <a id="login_btn_2" class="login_btn" href="#"><p>Get Started</p></a>
-            <div class="menu_wraper">
+            <div class="menu_wrapper">
                 <input type="checkbox" id="sidebar_link">
                 <label for="sidebar_link" id="menu_icon">
                     <ion-icon size="large" name="grid-outline"></ion-icon>
@@ -36,7 +37,7 @@
         </ul>
     </nav>
 
-    <div class="hero_wraper">
+    <div class="hero_wrapper">
         <div class="hero_text">
             <p class="hero_context">PEACE OF MIND FOR YOUR FINANCES</p>
             <h1 class="hero_title">Experience an Easy Way to Manage Finances</h1>
@@ -85,7 +86,7 @@
         </ul>
     </div>
 
-    <div class="hero_wraper hero_wraper2">
+    <div class="hero_wrapper hero_wrapper2">
 
         <div class="hero_img">
             <div class="personal_img_container">
@@ -117,7 +118,7 @@
         </div>
     </div>
 
-    <div class="hero_wraper hero_wraper hero_wraper3">
+    <div class="hero_wrapper hero_wrapper hero_wrapper3">
 
         <div class="hero_text hero_text">
             <p class="hero_context">FOR BUSINESS</p>
@@ -134,6 +135,11 @@
         
     </div>
 
+    <div class="solution_wrapper">
+
+</div>
+
+    </div>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
