fixing menu icon and styleing solution sec

--- a/index.html
+++ b/index.html
@@ -136,9 +136,14 @@
     </div>
 
     <div class="solution_wrapper">
-
-</div>
-
+        <div class="solution__content_wrapper">
+            <div class="solution__content">
+                <h1 class="solution__title">
+                    Providing solutions to all financial problems
+                </h1>
+                <p class="solution__context">Change the way you do money from your side hustle to your every day spending, at home or abroad.</p>
+            </div>
+        </div>
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
