Finishing solution section

--- a/index.html
+++ b/index.html
@@ -138,10 +138,95 @@
     <div class="solution_wrapper">
         <div class="solution__content_wrapper">
             <div class="solution__content">
-                <h1 class="solution__title">
-                    Providing solutions to all financial problems
-                </h1>
-                <p class="solution__context">Change the way you do money from your side hustle to your every day spending, at home or abroad.</p>
+
+                <div class="solution__text__wrapper">
+                    <h1 class="solution__title">
+                        Providing solutions to all financial problems
+                    </h1>
+                    <p class="solution__context">Change the way you do money from your side hustle to your every day spending, at home or abroad.</p>
+                </div>
+
+                <div class="solution__cards">
+                    <div class="solution__cards__items solution__cards__item1">
+                        <div class="solution__card__logo">
+                            <ion-icon name="cash-outline"></ion-icon>
+                        </div>
+
+                        <div class="solution__card__style">
+                            <ul class="solution__card__style__ul1">
+                                <li></li>
+                            </ul>
+                            <ul class="solution__card__style__ul2">
+                                <li></li>
+                            </ul>
+                        </div>
+
+                        <div class="solution__card__savings">
+                            <h3>Investment</h3>
+                            <p>Apart from saving and opening deposits, now you can invest in Gembese to grow your money.</p>
+                        </div>
+                    </div>
+
+                    <div class="solution__cards__items solution__cards__item1">
+                        <div class="solution__card__logo">
+                            <ion-icon name="bag-add-outline"></ion-icon>
+                        </div>
+
+                        <div class="solution__card__style">
+                            <ul class="solution__card__style__ul1">
+                                <li></li>
+                            </ul>
+                            <ul class="solution__card__style__ul2">
+                                <li></li>
+                            </ul>
+                        </div>
+
+                        <div class="solution__card__savings">
+                            <h3>Savings</h3>
+                            <p>Take advantage of Gembase sevings and deposits to manage/ grow your money.</p>
+                        </div>
+                    </div>
+
+                    <div class="solution__cards__items solution__cards__item1">
+                        <div class="solution__card__logo">
+                            <ion-icon name="alarm-outline"></ion-icon>
+                        </div>
+
+                        <div class="solution__card__style">
+                            <ul class="solution__card__style__ul1">
+                                <li></li>
+                            </ul>
+                            <ul class="solution__card__style__ul2">
+                                <li></li>
+                            </ul>
+                        </div>
+
+                        <div class="solution__card__savings">
+                            <h3>Pay later</h3>
+                            <p>Financing services that allow us as users to make purcheses without peying directly.</p>
+                        </div>
+                    </div>
+
+                    <div class="solution__cards__items solution__cards__item1">
+                        <div class="solution__card__logo">
+                            <ion-icon name="bar-chart-outline"></ion-icon>
+                        </div>
+
+                        <div class="solution__card__style">
+                            <ul class="solution__card__style__ul1">
+                                <li></li>
+                            </ul>
+                            <ul class="solution__card__style__ul2">
+                                <li></li>
+                            </ul>
+                        </div>
+
+                        <div class="solution__card__savings">
+                            <h3>Business</h3>
+                            <p>Separate your business finances. Manage the business more easily so the business can grow faster.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
