--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="business_sec.css">
     <link rel="stylesheet" href="solution_sec.css">
 
+    <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.18/dist/lenis.css">
+
+
+
 </head>
 <body>
     <nav class="main_nav">
@@ -231,7 +235,12 @@
         </div>
     </div>
 
+
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+    <script src="https://unpkg.com/lenis@1.1.18/dist/lenis.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.19/bundled/lenis.min.js"></script>
+    <script src="lenis.js"></script>
 </body>
 </html>
